<resources>
    <string name="app_name">이거먹자</string>

    <string-array name="years">
        <item>2025</item>
        <item>2024</item>
        <item>2023</item>
        <item>2022</item>
        <item>2021</item>
        <item>2020</item>
        <item>2019</item>
        <item>2018</item>
        <item>2017</item>
        <item>2016</item>
        <item>2015</item>
        <item>2014</item>
        <item>2013</item>
        <item>2012</item>
        <item>2011</item>
        <item>2010</item>
        <item>2009</item>
        <item>2008</item>
        <item>2007</item>
        <item>2006</item>
        <item>2005</item>
        <item>2004</item>
        <item>2003</item>
        <item>2002</item>
        <item>2001</item>
        <item>2000</item>
        <!-- 더 많은 년도 추가 -->
    </string-array>

    <string-array name="months">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <!-- 더 많은 월 추가 -->
    </string-array>

    <string-array name="days">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <!-- 더 많은 일 추가 -->
    </string-array>


    <!--Bottom Navigation-->
    <string name="home_title">식단</string>
    <string name="price_title">시세</string>
    <string name="sub_title">구독</string>
    <string name="my_title">마이</string>

    <!--Diet Fragment-->
    <string name="today">오늘</string>
    <string name="month">월간</string>
    <string name="serve">%s</string>
    <string name ="serve1">님, 안녕하세요.</string>
    <string name="greeting">활기찬 아침 되세요!</string>
    <string name="breakfast">아침</string>
    <string name="lunch">점심</string>
    <string name="dinner">저녁</string>

    <string name="daily_diet_day" formatted="false">%d월 %d일 식단</string>
    <string name="daily_diet_title">을 추천받아 보세요!</string>
    <string name="daily_diet_sub_title">좋아요를 눌러 AI에게 다양한 식단을 추천받아 볼 수 있어요</string>

    <string name="diet_title">요리 제목</string>
    <string name="diet_sub_title">해당 음식을 섭취했다면 체크 해주세요.</string>
    <string name="diet_complete">식단 완료</string>
    <string name="diet_price">예상 가격:</string>
    <string name="diet_price_contents">약 %d원</string>
    <string name="diet_calories">열량:</string>
    <string name="diet_calories_contents"> %d Kcal</string>
    <string name="ingredients">식재료</string>
    <string name="calories">칼로리</string>
    <string name="diet_level">조리 난이도</string>
    <string name="diet_ingredients">필요 식재료</string>
    <string name="diet_recipe">레시피</string>

    <!-- Sub Fragment -->
    <string name="sub_price_policy"><u>가격정책</u></string>


    <!--Calendar -->
    <string-array name="custom_weekdays">
        <item>월</item>
        <item>화</item>
        <item>수</item>
        <item>목</item>
        <item>금</item>
        <item>토</item>
        <item>일</item>
    </string-array>

</resources>