<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_diet_sub_unselected"
    android:layout_marginBottom="10dp"
    android:paddingVertical="10dp">

    <LinearLayout
        android:paddingVertical="20dp"
        android:id="@+id/ll_date"
        android:layout_marginStart="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="01.02"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_week"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="수"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="15sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:orientation="vertical"
        app:layout_constraintStart_toEndOf="@id/ll_date"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:id="@+id/ll_sub_meal_breakfast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_marginVertical="5dp"
            android:visibility="gone">

            <ImageButton
                android:id="@+id/ibtn_check_breakfast"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:backgroundTint="@color/transparent"
                android:src="@drawable/ic_check" />

            <TextView
                android:id="@+id/tv_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/breakfast"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_food_breakfast"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:layout_weight="1"
                android:text="콩나물 김치국, 제육볶음, 콩자반, 시금치 나물"
                android:textColor="@color/Gray4"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_sub_meal_lunch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_marginVertical="5dp"
            android:visibility="gone">

            <ImageButton
                android:id="@+id/ibtn_check_lunch"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:backgroundTint="@color/transparent"
                android:src="@drawable/ic_check" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/lunch"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_food_lunch"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:text="돈까스 냉모밀 세트, 새우튀김, 식혜"
                android:textColor="@color/Gray4"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_sub_meal_dinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_marginVertical="5dp"
            android:visibility="gone">

            <ImageButton
                android:id="@+id/ibtn_check_dinner"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:backgroundTint="@color/transparent"
                android:src="@drawable/ic_check" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/dinner"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_food_dinner"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:text="제육볶음, 파래무침, 멸치볶음, 미역국"
                android:textColor="@color/Gray4"
                android:textSize="12sp" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>