<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="20dp">

            <LinearLayout
                android:layout_marginStart="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_daily_diet_today"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:fontFamily="@font/pretendard_bold"
                    android:text="@string/daily_diet_day"
                    android:textColor="@color/Primary_Orange1"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:fontFamily="@font/pretendard_bold"
                    android:text="@string/daily_diet_title"
                    android:textColor="@color/Gray2"/>

            </LinearLayout>

            <TextView
                android:layout_marginTop="5dp"
                android:layout_marginStart="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/daily_diet_sub_title"
                android:textSize="14sp"
                android:textColor="@color/Gray2"
                android:fontFamily="@font/pretendard_medium"/>

            <!-- 아침 섹션 -->

            <TextView
                android:id="@+id/tv_breakfast_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="24dp"
                android:text="아침"
                android:textColor="@color/Gray2"
                android:fontFamily="@font/pretendard_bold"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView3" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_breakfast"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:orientation="horizontal"
                android:paddingHorizontal="12dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/tv_breakfast_title"/>

            <FrameLayout
                android:id="@+id/breakfast_indicator"
                android:layout_width="240dp"
                android:layout_height="4dp"
                android:layout_marginTop="8dp"
                android:layout_gravity="center"
                app:layout_constraintTop_toBottomOf="@id/rv_breakfast">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_indicator_background"/>

                <View
                    android:id="@+id/breakfast_indicator_bar"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_indicator_foreground"/>
            </FrameLayout>

            <!-- 점심 섹션 -->
            <TextView
                android:id="@+id/tv_lunch_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="점심"
                android:layout_marginStart="20dp"
                android:textSize="20sp"
                android:textColor="@color/Gray2"
                android:fontFamily="@font/pretendard_bold"
                android:layout_marginTop="24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rv_breakfast"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_lunch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:orientation="horizontal"
                android:paddingHorizontal="12dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/tv_lunch_title"/>

            <!-- 점심 인디케이터 -->
            <FrameLayout
                android:id="@+id/lunch_indicator"
                android:layout_width="240dp"
                android:layout_height="5dp"
                android:layout_marginTop="8dp"
                android:layout_gravity="center"
                app:layout_constraintTop_toBottomOf="@id/rv_lunch">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_indicator_background"/>

                <View
                    android:id="@+id/lunch_indicator_bar"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_indicator_foreground"/>
            </FrameLayout>

            <!-- 저녁 섹션 -->
            <TextView
                android:id="@+id/tv_dinner_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="저녁"
                android:textSize="20sp"
                android:textColor="@color/Gray2"
                android:fontFamily="@font/pretendard_bold"
                android:layout_marginTop="24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rv_lunch"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_dinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:clipToPadding="false"
                android:orientation="horizontal"
                android:paddingHorizontal="12dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_dinner_title" />

            <!-- 저녁 인디케이터 -->
            <FrameLayout
                android:id="@+id/dinner_indicator"
                android:layout_width="240dp"
                android:layout_height="4dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/rv_dinner"
                android:layout_gravity="center">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_indicator_background"/>

                <View
                    android:id="@+id/dinner_indicator_bar"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_indicator_foreground"/>
            </FrameLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>